what does this do?

--- a/_config.yml
+++ b/_config.yml
@@ -111,19 +111,19 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
+       url: mailto:your.name@email.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
        # url: "andrehatlo.com"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-square"
-       # url: "https://www.linkedin.com/in/andr%C3%A9-hatlo-johansen-952a228a/"
+        url: "https://www.linkedin.com/in/andr%C3%A9-hatlo-johansen-952a228a/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
        # url: "https://www.facebook.com/Andre.Hatlo"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-       # url: "https://github.com/Andrehatlo"
+        url: "https://github.com/Andrehatlo"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
        # url: "https://www.instagram.com/thehatlo/"
@@ -139,7 +139,7 @@ footer:
        # url: "https://www.facebook.com/Andre.Hatlo"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-       # url: "https://github.com/Andrehatlo"
+        # url: "https://github.com/Andrehatlo"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
