--- a/_config.yml
+++ b/_config.yml
@@ -111,13 +111,13 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: "mailto:your.name@email.com"
+       url: "mailto:iam@andrehatlo.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
        url: "andrehatlo.com"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-square"
-        url: "http://www.linkedin.com/in/andrehatlo"
+       url: "http://www.linkedin.com/in/andrehatlo"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
        url: "https://www.facebook.com/Andre.Hatlo"
