--- a/_config.yml
+++ b/_config.yml
@@ -109,12 +109,12 @@ author:
   location         : "Norway - Drammen"
   email            : "iam@andrehatlo.com"
   links:
-    # - label: "Email"
-    #   icon: "fas fa-fw fa-envelope-square"
-    #    url: "mailto:iam@andrehatlo.com"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+       # url: "mailto:iam@andrehatlo.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-       url: "andrehatlo.com"
+       # url: "andrehatlo.com"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-square"
        url: "http://www.linkedin.com/in/andrehatlo"
