--- a/_config.yml
+++ b/_config.yml
@@ -117,16 +117,16 @@ author:
        # url: "andrehatlo.com"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-square"
-       url: "http://www.linkedin.com/in/andrehatlo"
+       # url: "http://www.linkedin.com/in/andrehatlo"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-       url: "https://www.facebook.com/Andre.Hatlo"
+       # url: "https://www.facebook.com/Andre.Hatlo"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-        url: "http://www.github.com/andrehatlo"
+        # url: "http://www.github.com/andrehatlo"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-       url: "https://www.instagram.com/thehatlo/"
+       # url: "https://www.instagram.com/thehatlo/"
 
 # Site Footer
 footer:
