--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ author:
        # url: "https://www.facebook.com/Andre.Hatlo"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-        # url: "http://www.github.com/andrehatlo"
+        url: "http://www.github.com/andrehatlo"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
        # url: "https://www.instagram.com/thehatlo/"
