--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ author:
        # url: "http://www.linkedin.com/in/andrehatlo"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-       # url: "https://www.facebook.com/Andre.Hatlo"
+       url: "https://www.facebook.com/Andre.Hatlo"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
         url: "http://www.github.com/andrehatlo"
