--- a/_config.yml
+++ b/_config.yml
@@ -12,18 +12,18 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes@4.14.2"
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dark"  # "neon" "mint" "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-UK"
-title                    : "André's knowledge space"
+locale                   : "en-GB"
+title                    : "Hi! I'm André"
 title_separator          : "-"
 name                     : "André Hatlo-Johansen"
-description              : "Data Science Portfolio and Blog, with a main purpose to share knowledge as i learn"
-url                      : #"andrehatlo.github.io"
+description              : "Data Science Portfolio and Blog with a main purpose to share knowledge as i learn"
+url                      : "andrehatlo.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+repository               : "andrehatlo/andrehatlo.github.io"
+teaser                   : "/assets/images/me.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -91,7 +91,10 @@ og_image                 : # Open Graph/Twitter default site image
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  links:
+    - "http://www.linkedin.com/in/andrehatlo"
+    - "http://www.github.com/andrehatlo"
+    - "http://www.instagram.com/thehatlo/"
 
 # Analytics
 analytics:
@@ -106,49 +109,56 @@ author:
   name             : "André Hatlo-Johansen"
   avatar           : "/assets/images/me.png"
   bio              : "Data Science blog and portfolio"
-  location         : "Norway - Drammen"
-  email            : "iam@andrehatlo.com"
+  location         : "Drammen"
+  email            : #"iam@andrehatlo.com"
   links:
     - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-        url: "iam@andrehatlo.com"
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-       url: "www.andrehatlo.com"
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-square"
-       url: "www.linkedin.com/in/andrehatlo"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-       url: "www.facebook.com/Andre.Hatlo"
+      icon: "fas fa-fw fa-at"
+      url: "mailto:iam@andrehatlo.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-       url: "www.github.com/andrehatlo"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-       url: "www.instagram.com/thehatlo/"
+      url: "http://www.github.com/andrehatlo"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin-in"
+      url: "www.linkedin.com/in/andrehatlo"
+    - label: "StackOverflow"
+      icon: "fab fa-fw fa-stack-overflow"
+      url: "http://stackoverflow.com"
+    # - label: "Email"
+    #   icon: "fas fa-fw fa-envelope-square"
+    #   url: "mailto:iam@andrehatlo.com"
+    # - label: "Facebook"
+    #   icon: "fab fa-fw fa-facebook-square"fas fa-at
+    #   url: "www.facebook.com/Andre.Hatlo"
+    # - label: "Website"
+    #   icon: "fas fa-fw fa-link"
+    #   url: "www.andrehatlo.com"
+    # - label: "Instagram"
+    #   icon: "fab fa-fw fa-instagram"
+    #   url: "www.instagram.com/thehatlo/"
 
 # Site Footer
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-        # url: "https://twitter.com/Hatl00"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-       # url: "https://www.facebook.com/Andre.Hatlo"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-        # url: "https://github.com/Andrehatlo"
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
-      # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
-      # url:
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-       # url: "https://www.instagram.com/thehatlo/"
+      url: "https://github.com/Andrehatlo"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin-in"
+      url: "www.linkedin.com/in/andrehatlo"
+    - label: "Email"
+      icon: "fas fa-fw fa-at"
+      url: "mailto:iam@andrehatlo.com"
+    - label: "StackOverflow"
+      icon: "fab fa-fw fa-stack-overflow"
+      url: "http://stackoverflow.com"
+
+    # - label: "Facebook"
+    #   icon: "fab fa-fw fa-facebook-square"
+    #   url: "https://www.facebook.com/Andre.Hatlo"
+    # - label: "Instagram"
+    #   icon: "fab fa-fw fa-instagram"
+    #   url: "https://www.instagram.com/thehatlo/"
 
 
 # Reading Files
@@ -298,3 +308,6 @@ defaults:
     values:
       layout: single
       author_profile: true
+
+
+github: [metadata]
