some more changes

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "Hi! I'm André"
 title_separator          : "-"
 name                     : "André Hatlo-Johansen"
 description              : "Data Science Portfolio and Blog with a main purpose to share knowledge as i learn"
-url                      : "andrehatlo.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : "andrehatlo.com"
+baseurl                  : "/home"
 repository               : "andrehatlo/andrehatlo.github.io"
 teaser                   : "/assets/images/me.png"
 # breadcrumbs            : false # true, false (default)
@@ -112,9 +112,9 @@ author:
   location         : "Drammen"
   email            : #"iam@andrehatlo.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-at"
-      url: "mailto:iam@andrehatlo.com"
+    # - label: "Email"
+    #   icon: "fas fa-fw fa-at"
+    #   url: "mailto:iam@andrehatlo.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "http://www.github.com/andrehatlo"
@@ -146,9 +146,9 @@ footer:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-in"
       url: "www.linkedin.com/in/andrehatlo"
-    - label: "Email"
-      icon: "fas fa-fw fa-at"
-      url: "mailto:iam@andrehatlo.com"
+    # - label: "Email"
+    #   icon: "fas fa-fw fa-at"
+    #   url: "mailto:iam@andrehatlo.com"
     - label: "StackOverflow"
       icon: "fab fa-fw fa-stack-overflow"
       url: "http://stackoverflow.com"
