--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Hi! I'm André"
 title_separator          : "-"
 name                     : "André Hatlo-Johansen"
 description              : "Data Science Portfolio and Blog with a main purpose to share knowledge as i learn"
-url                      : "andrehatlo.com"
+url                      : "http://www.andrehatlo.com"
 baseurl                  : "/home"
 repository               : "andrehatlo/andrehatlo.github.io"
 teaser                   : "/assets/images/me.png"
@@ -112,9 +112,6 @@ author:
   location         : "Drammen"
   email            : #"iam@andrehatlo.com"
   links:
-    # - label: "Email"
-    #   icon: "fas fa-fw fa-at"
-    #   url: "mailto:iam@andrehatlo.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "http://www.github.com/andrehatlo"
@@ -146,13 +143,12 @@ footer:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-in"
       url: "www.linkedin.com/in/andrehatlo"
-    # - label: "Email"
-    #   icon: "fas fa-fw fa-at"
-    #   url: "mailto:iam@andrehatlo.com"
     - label: "StackOverflow"
       icon: "fab fa-fw fa-stack-overflow"
       url: "http://stackoverflow.com"
-
+    # - label: "Email"
+    #   icon: "fas fa-fw fa-at"
+    #   url: "mailto:iam@andrehatlo.com"
     # - label: "Facebook"
     #   icon: "fab fa-fw fa-facebook-square"
     #   url: "https://www.facebook.com/Andre.Hatlo"
