--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes@4.14.2"
-minimal_mistakes_skin    : "dirt" # "dark"  # "neon" "mint" "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dark"  # "neon" "mint" "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-GB"
@@ -20,8 +20,8 @@ title                    : "Hi! I'm André"
 title_separator          : "-"
 name                     : "André Hatlo-Johansen"
 description              : "Data Science Portfolio and Blog with a main purpose to share knowledge as i learn"
-url                      : "http://www.andrehatlo.com"
-baseurl                  : "/home"
+url                      : "andrehatlo.github.io"
+baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "andrehatlo/andrehatlo.github.io"
 teaser                   : "/assets/images/me.png"
 # breadcrumbs            : false # true, false (default)
@@ -112,6 +112,9 @@ author:
   location         : "Drammen"
   email            : #"iam@andrehatlo.com"
   links:
+    - label: "Email"
+      icon: "fas fa-fw fa-at"
+      url: "mailto:iam@andrehatlo.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "http://www.github.com/andrehatlo"
@@ -143,12 +146,13 @@ footer:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-in"
       url: "www.linkedin.com/in/andrehatlo"
+    - label: "Email"
+      icon: "fas fa-fw fa-at"
+      url: "mailto:iam@andrehatlo.com"
     - label: "StackOverflow"
       icon: "fab fa-fw fa-stack-overflow"
       url: "http://stackoverflow.com"
-    # - label: "Email"
-    #   icon: "fas fa-fw fa-at"
-    #   url: "mailto:iam@andrehatlo.com"
+
     # - label: "Facebook"
     #   icon: "fab fa-fw fa-facebook-square"
     #   url: "https://www.facebook.com/Andre.Hatlo"
