--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "dark"  # "neon" "mint" "default", "air", "aqua", "c
 
 # Site Settings
 locale                   : "en-GB"
-title                    : "Hi! I'm André"
+title                    : "Hi! I'm André :-)"
 title_separator          : "-"
 name                     : "André Hatlo-Johansen"
-description              : "Data Science Portfolio and Blog with a main purpose to share knowledge as i learn"
+description              : "My developer portfolio and blog."
 url                      : "andrehatlo.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "andrehatlo/andrehatlo.github.io"
