--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
       url: "http://www.github.com/andrehatlo"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-in"
-      url: "www.linkedin.com/in/andrehatlo"
+      url: "http://www.linkedin.com/in/andrehatlo"
     # - label: "StackOverflow"
     #   icon: "fab fa-fw fa-stack-overflow"
     #   url: "http://stackoverflow.com"
@@ -142,7 +142,7 @@ footer:
       url: "https://github.com/Andrehatlo"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-in"
-      url: "www.linkedin.com/in/andrehatlo"
+      url: "http://www.linkedin.com/in/andrehatlo"
     # - label: "Email"
     #   icon: "fas fa-fw fa-at"
     #   url: "mailto:iam@andrehatlo.com"
