--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "neon" # "default", "air", "aqua", "contrast", "dark"
 
 # Site Settings
 locale                   : "en-GB"
-title                    : "Hi! I'm André"
+title                    : "Hi! I'm André."
 title_separator          : "-"
 name                     : "André Hatlo-Johansen"
 description              : "Welcome to my developer portfolio and blog."
