--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "André Hatlo-Johansen"
   avatar           : "/assets/images/me.png"
-  bio              : "Welcome to my blog and portofolio!"
+  bio              : "Welcome to my blog and portofolio! This is a place where i will be posting all notes when learning new fundementals of different technologies."
   location         : "Drammen, Norway"
   email            : #"iam@andrehatlo.com"
   links:
