--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,16 @@
 # theme                  : "minimal-mistakes-jekyll"
-remote_theme             : "mmistakes/minimal-mistakes@4.24.0"
+#remote_theme             : "mmistakes/minimal-mistakes@4.24.0
 # remote_theme           : "mmistakes/minimal-mistakes@4.14.2"
-minimal_mistakes_skin    : "neon" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+remote_theme             : hydecorp/hydejack@v9.1.6
+#minimal_mistakes_skin    : "neon" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 
 # Site Settings
 locale                   : "en-GB"
-title                    : "A Creative Engineer"
+title                    : "Computer Engineer"
 title_separator          : "-"
 name                     : "André Hatlo"
-description              : "Creative Knowledge Center"
+description              : "Dev Knowledge Center"
 url                      : "www.andrehatlo.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "andrehatlo/andrehatlo.github.io"
