--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # theme                  : "minimal-mistakes-jekyll"
-#remote_theme             : "mmistakes/minimal-mistakes@4.24.0
+remote_theme             : "mmistakes/minimal-mistakes@4.24.0"
 # remote_theme           : "mmistakes/minimal-mistakes@4.14.2"
-remote_theme             : hydecorp/hydejack@v9.1.6
+#remote_theme             : hydecorp/hydejack@v9.1.6
 #minimal_mistakes_skin    : "neon" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 
