--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,14 @@
-# theme                  : "minimal-mistakes-jekyll"
+theme                    : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes@4.24.0"
-# remote_theme           : "mmistakes/minimal-mistakes@4.14.2"
-#remote_theme             : hydecorp/hydejack@v9.1.6
-#minimal_mistakes_skin    : "neon" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "neon" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 
 # Site Settings
 locale                   : "en-GB"
-title                    : "Computer Engineer"
+title                    : "A Creative Engineer"
 title_separator          : "-"
 name                     : "André Hatlo"
-description              : "Dev Knowledge Center"
+description              : "Creative Knowledge Center"
 url                      : "www.andrehatlo.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "andrehatlo/andrehatlo.github.io"
